# chatcli

./: .gitignore  README.md  chatcli.py  go.mod  install.sh  main.go  prompt.txt  pyproject.toml  requirements.txt  setup.py  uninstall.sh
chatcli/: main.py
chatcli/control/: config.py  env.py
cmd/: config.go  generate.go  root.go
control/: config.go  config.py  env.go  env.py
docs/: CNAME  index.html
